k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-sandbox-svc
spec:
  selector:
    app: k8s-sandbox
  ports:
    - port: 80
      targetPort: 80
